# spirit-graphviz

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  spirit-graphviz.cpp  spirit-graphviz.hpp  test.cpp
tests/: Session.vim  run_tests.sh
tests/available/: complex.dot  oneliners  simple.1.dot  simple.2.dot  simple.3.dot  simple.4.dot
